# challenges

./: README.md
aoc/2023/day5/: main.py  part_one.py  part_two.py  pyproject.toml
ctci/: arrays.py
foobar/: level1.py  level2_1.py  level2_2.py  level3_1.py  level3_2.py  level3_3.py  level4_1.py
kaggle/hm_fashion_reco/: pyproject.toml
kaggle/hm_fashion_reco/hm_fashion/: model.py
kaggle/hm_fashion_reco/notebooks/: 01_articles_eda.ipynb  01_customers_eda.ipynb  01_feat_articles.ipynb  01_transactions_eda.ipynb  02_feat_articles.ipynb  02_sections.ipynb  02_training.ipynb  03_cand_w2v.ipynb  04_baseline_submission.ipynb  04_training.ipynb  articles_eda.ipynb  customers_eda.ipynb
kaggle/hm_fashion_reco/terraform/: bigquery.tf  terraform.tfstate
kaggle/hm_fashion_reco/terraform/queries/: cand_article_department_sales.sql  cand_article_sales.sql  cand_article_similarity.sql  cand_prev_purchases.sql  feat_article.sql  feat_base_dates.sql  feat_customer.sql  feat_customer_article_color.sql  ground_truth.sql  misc_article_sales.sql  neg_by_popularity.sql  training_data.sql
kaggle/hm_fashion_reco/terraform/queries/sampling/: customers_001.sql  customers_01.sql  customers_05.sql
kaggle/sales/: pyproject.toml
leetcode/: avg_of_levels.py  bad_version.py  bt_level_order.py  can_finish.py  can_finish_2.py  cont_subarray_count.py  find_single_duplicate.py  group_anagrams.py  islands.py  ll_palindrome.py  longest_palindrome.py  matrix_zeroes.py  merge_sorted.py  min_depth.py  mul_duplicates.py  peak_index_mountain.py  product_except_self.py  reverse_int.py  spiral.py  (+7 more)
(+13 files in other folders)
