[tool.poetry]
name = "hm_fashion_reco"
version = "0.1.0"
description = ""
authors = ["Mike Czech <mike.czech@xing.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
kaggle = "^1.5.12"
xgboost = "^1.6.0"
altair = "^4.2.0"
jupyterlab = "^3.3.4"
nb-black = "^1.0.7"
black = "^22.3.0"
matplotlib = "^3.5.1"
rich = "^12.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
