[tool.poetry]
name = "sales"
version = "0.1.0"
description = ""
authors = ["Mike Czech <mail@mczech.de>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.9"
xgboost = "^1.2.1"
jupyterlab = "^2.2.9"
pandas = "^1.1.3"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.2"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
