[tool.poetry]
name = "day5"
version = "0.1.0"
description = ""
authors = ["Mike Czech <zenscr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numba = "^0.58.1"
tqdm = "^4.66.1"
jupyterlab = "^4.0.9"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
